--- a/workspace/.mcuxpressoide_packages_support/info.properties
+++ b/workspace/.mcuxpressoide_packages_support/info.properties
@@ -1,5 +1,5 @@
 #MCUXpresso IDE
-#Sun Mar 03 10:59:32 EST 2019
+#Wed Mar 13 15:34:25 EDT 2019
 product.version=10.3.0
 product.build=2200
 product.name=MCUXpresso IDE v10.3.0 [Build 2200] [2018-12-03]
